📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3830,5 +3830,157 @@
         "published": "Tue, 09 Dec 2025 14:39:26 +0000",
         "source": "MIT Technology Review",
         "summary": "Right now, MIT alumni and friends are voicing their support for: America\u2019s scientific and technological leadership Merit-based admissions and affordable education Advances that increase US health, security, and prosperity Our community is standing up for MIT and its mission to serve the nation and the world. And we need you to join us at this&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/india-proposes-charging-openai-google-for-training-ai-on-copyrighted-content/",
+        "title": "India proposes charging OpenAI, Google for training AI on copyrighted content",
+        "link": "https://techcrunch.com/2025/12/09/india-proposes-charging-openai-google-for-training-ai-on-copyrighted-content/",
+        "published": "Tue, 09 Dec 2025 16:09:17 +0000",
+        "source": "TechCrunch",
+        "summary": "India has given OpenAI, Google, and other AI firms 30 days to respond to its proposed royalty system for training on copyrighted content."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/asked-why-we-need-golden-dome-the-man-in-charge-points-to-a-hollywood-film/",
+        "title": "Asked why we need Golden Dome, the man in charge points to a Hollywood film",
+        "link": "https://arstechnica.com/space/2025/12/asked-why-we-need-golden-dome-the-man-in-charge-points-to-a-hollywood-film/",
+        "published": "Tue, 09 Dec 2025 15:35:39 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"If they see how prepared we are, no one starts a nuclear war.\""
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/resurrected-pebble-maker-announces-a-kind-of-smart-ring-for-capturing-audio-notes/",
+        "title": "Pebble maker announces Index 01, a smart-ish ring for under $100",
+        "link": "https://arstechnica.com/gadgets/2025/12/resurrected-pebble-maker-announces-a-kind-of-smart-ring-for-capturing-audio-notes/",
+        "published": "Tue, 09 Dec 2025 15:00:56 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The Pebble Index 01 isn't quite a smart ring, but it can do some smart things."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/the-11-best-gifts-under-25-for-2025-140042203.html?src=rss",
+        "title": "The 11 best gifts under $25 for 2025",
+        "link": "https://www.engadget.com/computing/accessories/the-11-best-gifts-under-25-for-2025-140042203.html?src=rss",
+        "published": "Tue, 09 Dec 2025 16:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The most hyped tech is often also the most expensive: flagship smartphones, ultra-powerful gaming laptops, immersive VR headsets and the like. But it would be wrong to assume that those are the only pieces of technology worth gifting. You don\u2019t have to drain your wallet to get someone a cool gadget that will both be useful and make their lives easier. There are more solid, affordable gadgets out there now more than ever, but that also means you\u2019ll discover some junk along the way. We\u2019ve colle"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/the-ai-boom-could-soon-send-gpu-prices-soaring-so-nows-a-good-time-to-buy-one-153000063.html?src=rss",
+        "title": "The AI boom could soon send GPU prices soaring, so now's a good time to buy one",
+        "link": "https://www.engadget.com/gaming/pc/the-ai-boom-could-soon-send-gpu-prices-soaring-so-nows-a-good-time-to-buy-one-153000063.html?src=rss",
+        "published": "Tue, 09 Dec 2025 15:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>When someone asks me for gadget buying advice, I normally tell them to stick with their current device. In 2025, most new tech products aren't a worthwhile upgrade over even something that was released a few years ago \u2014 and with the price of everything going up, that new iPhone can wait. But things aren't normal right now.&nbsp;</p><p>On December 3, <a class=\"link\" href=\"https://www.engadget.com/computing/crucial-is-a-casualty-of-ais-hunger-for-ram-185910113.html\" target=\"_blank\"><em>The Wall"
+    },
+    {
+        "id": "https://gizmodo.com/ifixit-made-an-ai-assistant-to-help-you-fix-your-gadgets-and-its-free-for-now-2000697275",
+        "title": "iFixit Made an AI Assistant to Help You Fix Your Gadgets (and It\u2019s Free, for Now)",
+        "link": "https://gizmodo.com/ifixit-made-an-ai-assistant-to-help-you-fix-your-gadgets-and-its-free-for-now-2000697275",
+        "published": "Tue, 09 Dec 2025 16:10:42 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ifixit Soldering Iron Kit\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2024/09/iFixit-Soldering-Iron-Kit.jpg\" width=\"1920\" /><br /><br />The new FixBot app uses iFixit\u2019s massive library to walk users through repair projects step-by-step."
+    },
+    {
+        "id": "https://gizmodo.com/ancient-construction-site-at-pompeii-sheds-light-on-romes-miraculous-self-healing-cement-2000697080",
+        "title": "Ancient Construction Site at Pompeii Sheds Light on Rome\u2019s Miraculous Self-Healing Cement",
+        "link": "https://gizmodo.com/ancient-construction-site-at-pompeii-sheds-light-on-romes-miraculous-self-healing-cement-2000697080",
+        "published": "Tue, 09 Dec 2025 16:00:40 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Construction Materials Pompeii\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/construction-materials-pompeii.jpg\" width=\"1920\" /><br /><br />How often do you think of ancient Roman cement?"
+    },
+    {
+        "id": "https://gizmodo.com/daisy-ridley-ben-solo-star-wars-movie-2000697254",
+        "title": "Daisy Ridley Shares Her Thoughts on the Canceled Ben Solo Movie",
+        "link": "https://gizmodo.com/daisy-ridley-ben-solo-star-wars-movie-2000697254",
+        "published": "Tue, 09 Dec 2025 15:30:19 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Rey Kylo Ren Daisy Ridley Adam Driver\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Rey-Kylo-Ren-Daisy-Ridley-Adam-Driver.jpg\" width=\"1920\" /><br /><br />The 'Star Wars' star loves how a desire to see the Adam Driver, Steven Soderbergh film united the fandom."
+    },
+    {
+        "id": "https://gizmodo.com/five-nights-at-freddys-2-kellen-goff-interview-foxy-2000696973",
+        "title": "How an Iconic \u2018Five Nights at Freddy\u2019s 2\u2019 Sound Got Its Spooky Origins",
+        "link": "https://gizmodo.com/five-nights-at-freddys-2-kellen-goff-interview-foxy-2000696973",
+        "published": "Tue, 09 Dec 2025 14:30:37 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Fnaf 2 Blumhouse Toy Freddy\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/FNAF-2-Blumhouse-Toy-Freddy.jpg\" width=\"1920\" /><br /><br />The voice of Foxy and Toy Freddy, Kellen Goff, talks about contributing a small but iconic part of 'Five Nights at Freddy's' cinematic soundscape."
+    },
+    {
+        "id": "https://mashable.com/article/champions-league-live-stream-for-free",
+        "title": "How to watch the Champions League online for free",
+        "link": "https://mashable.com/article/champions-league-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 15:50:57 +0000",
+        "source": "Mashable",
+        "summary": "How to watch the Champions League for free. Live stream the 2025-26 Champions League for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/xiaomi-motorola-apple-airtag-competitor",
+        "title": "Apple AirTag rivals from Motorola, Xiaomi expected soon",
+        "link": "https://mashable.com/article/xiaomi-motorola-apple-airtag-competitor",
+        "published": "Tue, 09 Dec 2025 15:44:01 +0000",
+        "source": "Mashable",
+        "summary": "Apple will have some more competition in the tracking device space soon, thanks to new entries from Xiaomi and Motorola."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-amazon-fire-tv-stick-4k-select-deal",
+        "title": "Amazons $9.99 Fire TV Stick 4K Select deal from Black Friday is back again",
+        "link": "https://mashable.com/article/dec-9-amazon-fire-tv-stick-4k-select-deal",
+        "published": "Tue, 09 Dec 2025 15:37:12 +0000",
+        "source": "Mashable",
+        "summary": "The Amazon Fire TV Stick 4K Select is back down to its $9.99 Black Friday price with a coupon code. Grab it before the deal disappears."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-toniebox-2-farm-bundle-deal",
+        "title": "The adorable Toniebox 2 My First Farm Bundle is $50 off at Amazon",
+        "link": "https://mashable.com/article/dec-9-toniebox-2-farm-bundle-deal",
+        "published": "Tue, 09 Dec 2025 15:17:39 +0000",
+        "source": "Mashable",
+        "summary": "The Toniebox 2 My First Farm Bundle is on sale at Amazon for $119.99, down from the list price of $169.98. That's a 29% discount."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-tip-your-amazon-driver-2025",
+        "title": "Thank your Amazon driver with a free $5 tip with a single click",
+        "link": "https://mashable.com/article/how-to-tip-your-amazon-driver-2025",
+        "published": "Tue, 09 Dec 2025 15:16:01 +0000",
+        "source": "Mashable",
+        "summary": "Amazon's \"thank my driver\" program is back. Thank your latest Amazon delivery driver with a free $5 on Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/stream-ring-hands-on/",
+        "title": "Wearing this smart ring reminded me of my Oura - then it started mimicking my voice",
+        "link": "https://www.zdnet.com/article/stream-ring-hands-on/",
+        "published": "Tue, 09 Dec 2025 15:48:00 GMT",
+        "source": "Latest news",
+        "summary": "Stream Ring is an AI-powered note-taker and thought organizer that users can speak into - with some clever tricks."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-popular-gadgets-from-our-readers-2025/",
+        "title": "Our readers' top 10 most-purchased gadgets shocked our editor (particularly No. 7)",
+        "link": "https://www.zdnet.com/article/most-popular-gadgets-from-our-readers-2025/",
+        "published": "Tue, 09 Dec 2025 15:32:00 GMT",
+        "source": "Latest news",
+        "summary": "These home office devices and accessories are the most popular among ZDNET readers so far this year."
+    },
+    {
+        "id": "https://www.zdnet.com/article/geminis-command-line-tool-is-a-productivity-game-changer-and-its-free-how-i-use-it/",
+        "title": "Gemini's command line tool is a productivity game changer, and it's free - how I use it",
+        "link": "https://www.zdnet.com/article/geminis-command-line-tool-is-a-productivity-game-changer-and-its-free-how-i-use-it/",
+        "published": "Tue, 09 Dec 2025 15:30:00 GMT",
+        "source": "Latest news",
+        "summary": "If you want to add Gemini AI to your Linux terminal workflow, you'll be surprised at how easy it is to install and use."
+    },
+    {
+        "id": "https://mistral.ai/news/devstral-2-vibe-cli",
+        "title": "Mistral Releases Devstral 2 (72.2% SWE-Bench Verified) and Vibe CLI",
+        "link": "https://mistral.ai/news/devstral-2-vibe-cli",
+        "published": "Tue, 09 Dec 2025 14:45:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46205437\">Comments</a>"
+    },
+    {
+        "id": "https://repebble.com/blog/meet-pebble-index-01-external-memory-for-your-brain",
+        "title": "New Pebble Device",
+        "link": "https://repebble.com/blog/meet-pebble-index-01-external-memory-for-your-brain",
+        "published": "Tue, 09 Dec 2025 15:03:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46205661\">Comments</a>"
     }
 ]
