📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3982,5 +3982,229 @@
         "published": "Tue, 09 Dec 2025 15:03:09 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46205661\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/fairphone-refreshes-its-good-looking-repairable-headphones/",
+        "title": "Fairphone refreshes its good-looking, repairable headphones",
+        "link": "https://techcrunch.com/2025/12/09/fairphone-refreshes-its-good-looking-repairable-headphones/",
+        "published": "Tue, 09 Dec 2025 17:08:14 +0000",
+        "source": "TechCrunch",
+        "summary": "Fairphone updates its repair over-the-ear headphones with new drivers."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/facebook-redesign-focuses-on-friends-photos-marketplace-and-more/",
+        "title": "Facebook redesign focuses on friends, photos, Marketplace and more",
+        "link": "https://techcrunch.com/2025/12/09/facebook-redesign-focuses-on-friends-photos-marketplace-and-more/",
+        "published": "Tue, 09 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Meta's Facebook redesign elevates Marketplace, refreshes profiles, and aims to win back Gen Z users."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/amazon-adds-delivery-tracking-last-minute-adds-gift-ideas-to-alexa/",
+        "title": "Amazon adds delivery tracking, last-minute adds, gift ideas to Alexa+",
+        "link": "https://techcrunch.com/2025/12/09/amazon-adds-delivery-tracking-last-minute-adds-gift-ideas-to-alexa/",
+        "published": "Tue, 09 Dec 2025 16:42:57 +0000",
+        "source": "TechCrunch",
+        "summary": "Amazon upgrades Alexa+ with new shopping tools, turning Echo screens into hubs for orders, deals, and gift buying."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/googles-first-ai-glasses-expected-next-year/",
+        "title": "Google\u2019s first AI glasses expected next year",
+        "link": "https://techcrunch.com/2025/12/09/googles-first-ai-glasses-expected-next-year/",
+        "published": "Tue, 09 Dec 2025 16:30:37 +0000",
+        "source": "TechCrunch",
+        "summary": "Google will compete with Meta with its own line of AI-powered smart glasses."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/eu-launches-antitrust-probe-into-googles-ai-search-tools/",
+        "title": "EU launches antitrust probe into Google\u2019s AI search tools",
+        "link": "https://techcrunch.com/2025/12/09/eu-launches-antitrust-probe-into-googles-ai-search-tools/",
+        "published": "Tue, 09 Dec 2025 16:29:49 +0000",
+        "source": "TechCrunch",
+        "summary": "The European Commission is investigating Google over its AI summaries."
+    },
+    {
+        "id": "https://www.theverge.com/tech/800444/best-tool-gift-ideas-2025",
+        "title": "The Verge\u2019s 2025 holiday gift guide for tinkerers",
+        "link": "https://www.theverge.com/tech/800444/best-tool-gift-ideas-2025",
+        "published": "2025-12-09T11:30:15-05:00",
+        "source": "The Verge",
+        "summary": "As AI tools continue to rise in popularity, it's easy to forget the satisfaction of using something that doesn't need an update or a prompt to help you get things done. I'm talking about tools. They're simple and rugged, and they don't make things needlessly complicated. And now that the holidays are approaching, these tools [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840789/youtube-video-title-a-b-testing-feature",
+        "title": "YouTube creators can now test multiple video titles",
+        "link": "https://www.theverge.com/news/840789/youtube-video-title-a-b-testing-feature",
+        "published": "2025-12-09T11:28:58-05:00",
+        "source": "The Verge",
+        "summary": "YouTube is giving more creators a way to test how different titles perform on their videos. After rolling out the ability to test and compare video titles to a \"small percentage\" of creators in July, YouTube has now expanded the tool in YouTube Studio to \"all creators with access to advanced features,\" making it easier [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840727/ikea-smart-home-matter-thread-sensors-now-available",
+        "title": "Some of Ikea\u2019s Matter-compatible smart devices are now available in the US",
+        "link": "https://www.theverge.com/news/840727/ikea-smart-home-matter-thread-sensors-now-available",
+        "published": "2025-12-09T11:18:53-05:00",
+        "source": "The Verge",
+        "summary": "When Ikea announced its collection of 21 new Matter-over-Thread devices last month, it wasn't expecting the new hardware to be available in the US until January 2026. Over the past month the devices have started showing up across Europe, but a handful of them are now available through Ikea's US website and some of its [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/google-is-reviving-wearable-gesture-controls-but-only-for-the-pixel-watch-4/",
+        "title": "Google is reviving wearable gesture controls, but only for the Pixel Watch 4",
+        "link": "https://arstechnica.com/gadgets/2025/12/google-is-reviving-wearable-gesture-controls-but-only-for-the-pixel-watch-4/",
+        "published": "Tue, 09 Dec 2025 17:00:28 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google will let you select and dismiss with a gesture, but only on the newest watch."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/days-after-cop30-brazil-weakened-amazon-safeguards/",
+        "title": "Brazil weakens Amazon protections days after COP30",
+        "link": "https://arstechnica.com/science/2025/12/days-after-cop30-brazil-weakened-amazon-safeguards/",
+        "published": "Tue, 09 Dec 2025 16:10:45 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Backed by powerful corporations, nations are giving public false choices: Environmental protection or economic growth."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/study-confirms-romans-used-hot-mixing-to-make-concrete/",
+        "title": "Pompeii construction site confirms recipe for Roman concrete",
+        "link": "https://arstechnica.com/science/2025/12/study-confirms-romans-used-hot-mixing-to-make-concrete/",
+        "published": "Tue, 09 Dec 2025 16:00:29 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Latest results from a recently discovered ancient Roman construction site confirm earlier findings."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/in-a-major-new-report-scientists-build-rationale-for-sending-astronauts-to-mars/",
+        "title": "In a major new report, scientists build rationale for sending astronauts to Mars",
+        "link": "https://arstechnica.com/space/2025/12/in-a-major-new-report-scientists-build-rationale-for-sending-astronauts-to-mars/",
+        "published": "Tue, 09 Dec 2025 16:00:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"Everyone is inspired by this because it's becoming real.\""
+    },
+    {
+        "id": "https://www.engadget.com/wearables/google-pixel-watch-4-gets-double-pinch-and-wrist-turn-features-170024210.html?src=rss",
+        "title": "Google Pixel Watch 4 gets double pinch and wrist turn features",
+        "link": "https://www.engadget.com/wearables/google-pixel-watch-4-gets-double-pinch-and-wrist-turn-features-170024210.html?src=rss",
+        "published": "Tue, 09 Dec 2025 17:00:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It has been two months since Google released the Pixel Watch 4 and now the company is introducing new updates to the wearable. In <a href=\"https://www.engadget.com/wearables/pixel-watch-4-review-a-well-rounded-smartwatch-with-a-surprising-advantage-170059851.html\">our review</a>, Engadget managing editor Cherlynn Low was impressed enough with the watch to give it an 86, but called out the lack of gesture-based interactions. The new one-handed gesture features, like double pinch and wrist turn"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/study-shows-that-instacart-was-charging-different-amounts-for-the-same-items-165108224.html?src=rss",
+        "title": "Study shows that Instacart was charging different amounts for the same items",
+        "link": "https://www.engadget.com/big-tech/study-shows-that-instacart-was-charging-different-amounts-for-the-same-items-165108224.html?src=rss",
+        "published": "Tue, 09 Dec 2025 16:51:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A <a href=\"https://groundworkcollaborative.org/work/instacart/\"><ins>collaborative report</ins></a> from Consumer Reports, <a href=\"https://groundworkcollaborative.org/\"><ins>Groundwork Collaborative</ins></a> and <a href=\"https://perfectunion.us/\"><ins>More Perfect Union</ins></a> has uncovered pricing experiments within the Instacart app that yielded higher or lower prices for different users on the exact same items from the same store location.</p>\n<p>The organizations partnered to enroll "
+    },
+    {
+        "id": "https://www.engadget.com/wearables/pebble-is-making-a-weird-little-smart-ring-for-recording-thoughts-161723645.html?src=rss",
+        "title": "Pebble is making a weird little smart ring for recording thoughts",
+        "link": "https://www.engadget.com/wearables/pebble-is-making-a-weird-little-smart-ring-for-recording-thoughts-161723645.html?src=rss",
+        "published": "Tue, 09 Dec 2025 16:17:23 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Pebble <a href=\"https://repebble.com/blog/meet-pebble-index-01-external-memory-for-your-brain\"><ins>just announced the Index 01</ins></a>, a smart ring for recording thoughts. It's a little ring with a built-in microphone and that's about it. The Index 01 is almost anti-tech in its simplicity. There's no needless AI component shoehorned in, aside from speech-to-text. It's a ring with a microphone that you whisper ideas into and I want one.</p>\n<p>Here's how it works. You get an idea while wal"
+    },
+    {
+        "id": "https://gizmodo.com/rogue-marvel-rivals-abilities-explained-2000696619",
+        "title": "Hey, Sugar, Rogue Comes to \u2018Marvel Rivals\u2019 This Week",
+        "link": "https://gizmodo.com/rogue-marvel-rivals-abilities-explained-2000696619",
+        "published": "Tue, 09 Dec 2025 17:00:50 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Rogue Marvel Rivals\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/rogue-marvel-rivals.jpg\" width=\"1920\" /><br /><br />You know her, you love her almost as much as Gambit does. In a few days, Rogue will be all yours to play as the newest 'Marvel Rivals' hero."
+    },
+    {
+        "id": "https://gizmodo.com/officials-told-ohio-school-to-trash-72-dead-vultures-like-garbage-turns-out-they-had-bird-flu-2000697260",
+        "title": "Officials Told Ohio School to Trash 72 Dead Vultures Like Garbage. Turns Out They Had Bird Flu",
+        "link": "https://gizmodo.com/officials-told-ohio-school-to-trash-72-dead-vultures-like-garbage-turns-out-they-had-bird-flu-2000697260",
+        "published": "Tue, 09 Dec 2025 16:45:44 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Blackvultures\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/blackvultures.jpg\" width=\"1920\" /><br /><br />Staff at an Ohio school were shocked to discover dozens of dead vultures on its campus. Even more shocking was the response from the state's wildlife officials."
+    },
+    {
+        "id": "https://gizmodo.com/fairbuds-xl-2-are-also-an-upgrade-for-its-old-headphones-2000697198",
+        "title": "These Repair-Friendly Headphones Let You Swap Out Almost Everything",
+        "link": "https://gizmodo.com/fairbuds-xl-2-are-also-an-upgrade-for-its-old-headphones-2000697198",
+        "published": "Tue, 09 Dec 2025 16:27:00 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Fairbuds 2\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/fairbuds-2.jpg\" width=\"1920\" /><br /><br />Fairphone's Fairbuds XL are what modularity is all about."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-blink-outdoor-4-mini-2-bundle-deal",
+        "title": "Keep a watchful eye on your home with the Blink Outdoor 4 + Mini 2 for just $70",
+        "link": "https://mashable.com/article/dec-9-blink-outdoor-4-mini-2-bundle-deal",
+        "published": "Tue, 09 Dec 2025 16:29:29 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 9, get the Blink Outdoor 4 + Mini 2 bundle for just $70."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-govee-tv-backlight-deal",
+        "title": "The giftable Govee TV Backlight 3 is on sale at Amazon for under $60",
+        "link": "https://mashable.com/article/dec-9-govee-tv-backlight-deal",
+        "published": "Tue, 09 Dec 2025 16:18:10 +0000",
+        "source": "Mashable",
+        "summary": "The Govee TV Backlight 3 Lite is on sale at Amazon for $58.99, down from the normal price of $89.99. That's a 34% discount."
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-users-feed-share-direct-message",
+        "title": "TikTok will let users share feeds in DMs",
+        "link": "https://mashable.com/article/tiktok-users-feed-share-direct-message",
+        "published": "Tue, 09 Dec 2025 16:10:22 +0000",
+        "source": "Mashable",
+        "summary": "A new TikTok feature will allow you to share a feed and scroll together."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-solawave-bogo-free-deal",
+        "title": "All Solawave light therapy devices are BOGO free, including the $399 red light mask",
+        "link": "https://mashable.com/article/dec-9-solawave-bogo-free-deal",
+        "published": "Tue, 09 Dec 2025 16:09:06 +0000",
+        "source": "Mashable",
+        "summary": "Solawave's extended Black Friday sale gets you two skincare devices for the price of one, like two LED face masks for $399 total."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-your-windows-11-pc-cache/",
+        "title": "How to clear your Windows 11 PC cache (and wipe out lag for good)",
+        "link": "https://www.zdnet.com/article/how-to-clear-your-windows-11-pc-cache/",
+        "published": "Tue, 09 Dec 2025 16:27:00 GMT",
+        "source": "Latest news",
+        "summary": "Clear this hidden data to noticeably speed up your computer - here's how to find it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-flip-phone/",
+        "title": "The best flip phones of 2025: I compared Samsung and Motorola's top models",
+        "link": "https://www.zdnet.com/article/best-flip-phone/",
+        "published": "Tue, 09 Dec 2025 16:22:00 GMT",
+        "source": "Latest news",
+        "summary": "Here's how the Galaxy Z Flip 7 and Razr Ultra compare in 2025, and why you shouldn't overlook the alternatives."
+    },
+    {
+        "id": "https://dosaygo-studio.github.io/hn-front-page-2035/news",
+        "title": "Show HN: Gemini Pro 3 Hallucinates the HN Front Page 10 Years from Today",
+        "link": "https://dosaygo-studio.github.io/hn-front-page-2035/news",
+        "published": "Tue, 09 Dec 2025 15:00:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46205632\">Comments</a>"
+    },
+    {
+        "id": "https://bruno-simon.com/",
+        "title": "Handsdown one of the coolest 3D websites",
+        "link": "https://bruno-simon.com/",
+        "published": "Tue, 09 Dec 2025 16:06:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46206531\">Comments</a>"
+    },
+    {
+        "id": "https://www.corsix.org/content/my-favourite-small-hash-table",
+        "title": "My favourite small hash table",
+        "link": "https://www.corsix.org/content/my-favourite-small-hash-table",
+        "published": "Tue, 09 Dec 2025 14:47:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46205461\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/accenture-anthropic-partner-boost-enterprise-ai-integration/",
+        "title": "Accenture and Anthropic partner to boost enterprise AI integration",
+        "link": "https://www.artificialintelligence-news.com/news/accenture-anthropic-partner-boost-enterprise-ai-integration/",
+        "published": "Tue, 09 Dec 2025 16:20:18 +0000",
+        "source": "AI News",
+        "summary": "<p>Accenture and Anthropic are setting out to boost enterprise AI integration with a newly-expanded partnership. While 2024 was defined by corporate curiosity regarding Large Language Models (LLMs), the current mandate for business leaders is operationalising these tools to achieve a return on investment. The new Accenture Anthropic Business Group combines Anthropic\u2019s model capabilities with Accenture\u2019s [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/accenture"
     }
 ]
